<resources>
    <string name="app_name">News App</string>
    <string name="api_key">9aee23cae4bb4d7287f2905149c7fa6d</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
</resources>