<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entertainment"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technology"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"/>
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        app:cardElevation="8dp" >

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:defaultQueryHint="Search News ..."
            app:iconifiedByDefault="false"/>
    </androidx.cardview.widget.CardView>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>